# meldingen-core

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.cache.json  docker-compose.yml  mkdocs.yml  mypy-baseline.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  cleanup-packages.yml  static-analysis.yml  tests.yml
docs/: index.md  skill-core-vs-meldingen.md  summary.md
docs/ADRs/: 2025_10_28_relationship_manager.md
docs/ADRs/template/: adr_template.md
meldingen_core/: __init__.py  actions.py  address.py  classification.py  exceptions.py  factories.py  filters.py  image.py  labels.py  location.py  mail.py  malware.py  managers.py  models.py  reclassification.py  repositories.py  statemachine.py  token.py  validators.py  wfs.py
meldingen_core/actions/: asset.py  asset_type.py  attachment.py  base.py  classification.py  form.py  mail.py  melding.py  note.py  source.py  user.py  wfs.py
tests/: test_classification.py  test_labels.py  test_location.py  test_managers.py  test_statemachine.py  test_token.py  test_wfs.py
tests/test_actions/: test_asset.py  test_asset_type.py  test_attachment.py  test_base_actions.py  test_classification_actions.py  test_form_actions.py  test_melding_actions.py  test_note_actions.py  test_source_actions.py  test_user_actions.py  test_wfs.py
tests/test_meldingen/: test_actions.py
