[project]
name = "meldingen-core"
version = "0.1.0"
description = "Framework agnostic package containing the core code for the meldingen project."
authors = [
    {name = "Youri Westerman", email = "y.westerman@amsterdam.nl"},
    {name = "Ramon Hofmeister", email = "r.hofmeister@amsterdam.nl"},
]
readme = "README.md"
license = "EUPL-2.1"
requires-python = "^3.13"

dependencies = [
    "plugfs @ git+https://github.com/Amsterdam/plugfs.git"
]

[tool.poetry.group.dev.dependencies]
anyio = "^4.11.0"
black = "^25.9.0"
isort = "^6.1.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-material = "^9.6.21"
mkdocstrings = {version = "^0.30.1", extras = ["python"]}
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pytest = "^8.4.1"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.env
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["meldingen_core"]
overwrite_in_place = true

[tool.coverage.run]
source = ["meldingen_core"]

[tool.coverage.report]
exclude_lines = ["@abstractmethod", "pragma: no cover"]

[tool.mypy]
strict = true
